fix jumping due to rules section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -287,7 +287,7 @@ input[type="submit"] {
 	background: #ACACAC;
 	padding-top: 50px;
 	padding-bottom: 50px;
-	
+	height: 295px;
 }
 
 #y .glyphicon {
